feat:  animated card when it loads
- Created functions.js module for functions
- added animation for card
- included configuration in .eslintrc for raising error when console methods

--- a/src/index.html
+++ b/src/index.html
@@ -26,11 +26,9 @@
       rel="stylesheet"
     />
   </head>
-  <body class="flex flex-column justify-space-between align-center">
+  <body class="flex flex-column justify-space-between align-center gap-3">
     <header class="header">
-      <a href="#" class="logo" title="myColorConverter logo"
-        >myColorConverter</a
-      >
+      <a href="#" class="logo" title="logo">myColorConverter</a>
     </header>
 
     <main class="main">
@@ -40,7 +38,7 @@
       </div>
 
       <div class="cards__wrapper">
-        <div class="card hextorgb__card flex flex-column gap-4">
+        <div class="card card-visible hextorgb__card flex flex-column gap-4">
           <div class="card__color--data flex flex-column gap-4">
             <div class="color__field--wrapper flex flex-column">
               <label for="hex">Hex color code</label>
