chore: restructure html code with prettier

--- a/src/index.html
+++ b/src/index.html
@@ -4,14 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta
-      name="keywords"
-      content="color converter,rgb to hex,hex to rgb,convert color"
-    />
-    <meta
-      name="description"
-      content="myColorConverter lets you to convert either HEX to RGB or RGB to HEX"
-    />
+    <meta name="keywords" content="color converter,rgb to hex,hex to rgb,convert color" />
+    <meta name="description" content="myColorConverter lets you to convert either HEX to RGB or RGB to HEX" />
     <meta name="author" content="Rahulbaran" />
     <meta name="contact" content="rahulkumar10942@gmail.com" />
 
@@ -21,10 +15,7 @@
     <title><%= htmlWebpackPlugin.options.title %></title>
 
     <!---------- boxicons ------------>
-    <link
-      href="https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css"
-      rel="stylesheet"
-    />
+    <link href="https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css" rel="stylesheet" />
   </head>
   <body class="flex flex-column justify-space-between align-center gap-3">
     <header class="header">
@@ -45,33 +36,25 @@
               <input
                 type="text"
                 name="hex"
-                class="hex__input--ield"
+                class="hex__input--field"
                 id="hex"
                 autocomplete="off"
                 placeholder="#ffff00"
               />
             </div>
 
-            <div
-              class="color__value--box flex gap-2 align-center justify-space-between"
-            >
+            <div class="color__value--box flex gap-2 align-center justify-space-between">
               <h3>rgb</h3>
-              <h4
-                class="color__value rgb__value flex justify-space-between align-center"
-              >
+              <h4 class="color__value rgb__value flex justify-space-between align-center">
                 <span>rgb(255, 255, 0)</span>
                 <button class="btn" title="copy color value">
                   <i class="bx bxs-copy"></i>
                 </button>
               </h4>
             </div>
-            <div
-              class="color__value--box flex gap-2 align-center justify-space-between"
-            >
+            <div class="color__value--box flex gap-2 align-center justify-space-between">
               <h3>hsl</h3>
-              <h4
-                class="color__value hsl__value flex justify-space-between align-center"
-              >
+              <h4 class="color__value hsl__value flex justify-space-between align-center">
                 <span>hsl(60, 100%, 50%)</span>
                 <button class="btn" title="copy color value">
                   <i class="bx bxs-copy"></i>
@@ -89,33 +72,25 @@
               <input
                 type="text"
                 name="rgb"
-                class="rgb__input--ield"
+                class="rgb__input--field"
                 id="rgb"
                 autocomplete="off"
                 placeholder="rgb(255, 0, 255)"
               />
             </div>
 
-            <div
-              class="color__value--box flex gap-2 align-center justify-space-between"
-            >
+            <div class="color__value--box flex gap-2 align-center justify-space-between">
               <h3>hex</h3>
-              <h4
-                class="color__value hex__value flex justify-space-between align-center"
-              >
+              <h4 class="color__value hex__value flex justify-space-between align-center">
                 <span>#ff00ff</span>
                 <button class="btn" title="copy color value">
                   <i class="bx bxs-copy"></i>
                 </button>
               </h4>
             </div>
-            <div
-              class="color__value--box flex gap-2 align-center justify-space-between"
-            >
+            <div class="color__value--box flex gap-2 align-center justify-space-between">
               <h3>hsl</h3>
-              <h4
-                class="color__value hsl__value flex justify-space-between align-center"
-              >
+              <h4 class="color__value hsl__value flex justify-space-between align-center">
                 <span>hsl(300, 100%, 50%)</span>
                 <button class="btn" title="copy color value">
                   <i class="bx bxs-copy"></i>
@@ -129,11 +104,7 @@
     </main>
 
     <footer class="footer">
-      <a
-        href="https://github.com/rahulbaran/myColorConverter"
-        title="check app codebase"
-        target="_blank"
-      >
+      <a href="https://github.com/rahulbaran/myColorConverter" title="check app codebase" target="_blank">
         <i class="bx bxl-github bx-md"></i>
       </a>
     </footer>
