refactor: logo as app link reference
- provided app link as reference to logo

--- a/src/index.html
+++ b/src/index.html
@@ -4,8 +4,14 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="keywords" content="color converter,rgb to hex,hex to rgb,convert color" />
-    <meta name="description" content="myColorConverter lets you to convert either HEX to RGB or RGB to HEX" />
+    <meta
+      name="keywords"
+      content="color converter,rgb to hex,hex to rgb,convert color"
+    />
+    <meta
+      name="description"
+      content="myColorConverter lets you to convert either HEX to RGB or RGB to HEX"
+    />
     <meta name="author" content="Rahulbaran" />
     <meta name="contact" content="rahulkumar10942@gmail.com" />
 
@@ -15,11 +21,16 @@
     <title><%= htmlWebpackPlugin.options.title %></title>
 
     <!---------- boxicons ------------>
-    <link href="https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css" rel="stylesheet" />
+    <link
+      href="https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css"
+      rel="stylesheet"
+    />
   </head>
   <body class="flex flex-column justify-space-between align-center gap-3">
     <header class="header">
-      <a href="#" class="logo" title="logo">myColorConverter</a>
+      <a href="https://mycolorconverter.netlify.app/" class="logo" title="logo"
+        >myColorConverter</a
+      >
     </header>
 
     <main class="main">
@@ -43,18 +54,26 @@
               />
             </div>
 
-            <div class="color__value--box flex gap-2 align-center justify-space-between">
+            <div
+              class="color__value--box flex gap-2 align-center justify-space-between"
+            >
               <h3>rgb</h3>
-              <h4 class="color__value rgb__value flex justify-space-between align-center">
+              <h4
+                class="color__value rgb__value flex justify-space-between align-center"
+              >
                 <span>rgb(255, 255, 0)</span>
                 <button class="btn" title="copy color value">
                   <i class="bx bxs-copy"></i>
                 </button>
               </h4>
             </div>
-            <div class="color__value--box flex gap-2 align-center justify-space-between">
+            <div
+              class="color__value--box flex gap-2 align-center justify-space-between"
+            >
               <h3>hsl</h3>
-              <h4 class="color__value hsl__value flex justify-space-between align-center">
+              <h4
+                class="color__value hsl__value flex justify-space-between align-center"
+              >
                 <span>hsl(60, 100%, 50%)</span>
                 <button class="btn" title="copy color value">
                   <i class="bx bxs-copy"></i>
@@ -79,18 +98,26 @@
               />
             </div>
 
-            <div class="color__value--box flex gap-2 align-center justify-space-between">
+            <div
+              class="color__value--box flex gap-2 align-center justify-space-between"
+            >
               <h3>hex</h3>
-              <h4 class="color__value hex__value flex justify-space-between align-center">
+              <h4
+                class="color__value hex__value flex justify-space-between align-center"
+              >
                 <span>#ff00ff</span>
                 <button class="btn" title="copy color value">
                   <i class="bx bxs-copy"></i>
                 </button>
               </h4>
             </div>
-            <div class="color__value--box flex gap-2 align-center justify-space-between">
+            <div
+              class="color__value--box flex gap-2 align-center justify-space-between"
+            >
               <h3>hsl</h3>
-              <h4 class="color__value hsl__value flex justify-space-between align-center">
+              <h4
+                class="color__value hsl__value flex justify-space-between align-center"
+              >
                 <span>hsl(300, 100%, 50%)</span>
                 <button class="btn" title="copy color value">
                   <i class="bx bxs-copy"></i>
@@ -104,7 +131,11 @@
     </main>
 
     <footer class="footer">
-      <a href="https://github.com/rahulbaran/myColorConverter" title="check app codebase" target="_blank">
+      <a
+        href="https://github.com/rahulbaran/myColorConverter"
+        title="check app codebase"
+        target="_blank"
+      >
         <i class="bx bxl-github bx-md"></i>
       </a>
     </footer>
