feat: change color-pallete for dark mode

--- a/src/index.html
+++ b/src/index.html
@@ -35,8 +35,8 @@
 
     <main class="main">
       <div class="btns__wrapper flex justify-center align-flex-start gap-1">
-        <button class="btn btn__active hextorgb__btn">Hex to Rgb</button>
-        <button class="btn rgbtohex__btn">Rgb to Hex</button>
+        <button class="btn btn__active hextorgb__btn">HEX to RGB</button>
+        <button class="btn rgbtohex__btn">RGB to HEX</button>
       </div>
 
       <div class="cards__wrapper">
