--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,7 @@
 
     <title><%= htmlWebpackPlugin.options.title %></title>
 
-    <!---------- boxicons ------------>
+    <!------------------- boxicons --------------------->
     <link
       href="https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css"
       rel="stylesheet"
