--- a/src/index.html
+++ b/src/index.html
@@ -13,18 +13,27 @@
       content="myColorConverter lets you to convert either HEX to RGB or RGB to HEX"
     />
     <meta name="author" content="Rahulbaran" />
-    <meta name="contact" content="rahulkumar10942@gmail.com" />
+    <meta name="contact" content="rahulkumar109422@gmail.com" />
 
     <meta name="robots" content="index,follow" />
     <meta name="color-scheme" content="dark light" />
+    <title>myColorConverter - HEX, RGB & HSL Conversions</title>
 
-    <title><%= htmlWebpackPlugin.options.title %></title>
+    <!---------------------- Google Fonts ----------------------->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;500;600;700;800;900&display=swap"
+      rel="stylesheet"
+    />
 
-    <!------------------- boxicons --------------------->
+    <!------------------------ boxicons -------------------------->
     <link
       href="https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css"
       rel="stylesheet"
     />
+
+    <script src="./js/main.js" defer type="module"></script>
   </head>
   <body class="flex flex-column justify-space-between align-center gap-3">
     <header class="header">
