feat: add meta tags for og cards
- included screenshot of app in public for open graph meta tags
- added open graph meta tags in index file

--- a/src/index.html
+++ b/src/index.html
@@ -10,16 +10,42 @@
     />
     <meta
       name="description"
-      content="myColorConverter lets you to convert either HEX to RGB or RGB to HEX"
+      content="myColorConverter lets you to convert color values from one form to another(HEX, RGB & HSL)"
     />
     <meta name="author" content="Rahulbaran" />
     <meta name="contact" content="rahulkumar109422@gmail.com" />
 
+    <!------------------ Facebook open graph tags ----------------->
+    <meta
+      property="og:title"
+      content="myColorConverter - HEX, RGB & HSL color conversions"
+    />
+    <meta
+      property="og:description"
+      content="myColorConverter lets you to convert color values from one form to another(HEX, RGB & HSL)"
+    />
+    <meta property="”og:type”" content="”website”" />
+    <meta property="og:url" content="https://mycolorconverter.netlify.app/" />
+    <meta property="og:image" content="/screenshots/og-card-banner.png" />
+
+    <!----------- Twitter Open Graph Tags ------------>
+    <meta
+      name="twitter:title"
+      content="myColorConverter - HEX, RGB & HSL color conversions"
+    />
+    <meta
+      name="twitter:description"
+      content="myColorConverter lets you to convert color values from one form to another(HEX, RGB & HSL)"
+    />
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:url" content="https://mycolorconverter.netlify.app/" />
+    <meta name="twitter:image" content="/screenshots/og-card-banner.png" />
+
     <meta name="robots" content="index,follow" />
     <meta name="color-scheme" content="dark light" />
-    <title>myColorConverter - HEX, RGB & HSL Conversions</title>
+    <title>myColorConverter - HEX, RGB & HSL color conversions</title>
 
-    <!---------------------- Google Fonts ----------------------->
+    <!----------------------- Google Fonts ------------------------>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
