include a bug for test

--- a/src/index.html
+++ b/src/index.html
@@ -24,7 +24,7 @@
       property="og:description"
       content="myColorConverter lets you to convert color values from one form to another(HEX, RGB & HSL)"
     />
-    <meta property="og:type" content="website" />
+    <meta property="”og:type”" content="”website”" />
     <meta property="og:url" content="https://mycolorconverter.netlify.app/" />
     <meta property="og:image" content="/screenshots/og-card-banner.png" />
 
